Number 57 added preloader and pagination

--- a/src/Components/Users/Users.module.css
+++ b/src/Components/Users/Users.module.css
@@ -29,3 +29,12 @@
     font-size: 20px;
     color: darkorchid;
 }
+
+.pageIndication {
+    font-weight: bold;
+}
+
+.itemStyle {
+    color: #000;
+    padding: 3px;
+}
