almost finished version it needs to hinish title in the Header

--- a/src/Components/Dialogs/DialogItem/DialogItem.module.css
+++ b/src/Components/Dialogs/DialogItem/DialogItem.module.css
@@ -1,14 +1,14 @@
 .dialog {
     text-decoration: none;
-    color: darkslategray;
+    color: aliceblue;
 }
 
 .dialog:hover{
-    color: cyan;
+    color: crimson;
 }
 
 .dialog:active {
-    color: cornflowerblue;
+    color: red;
 }
 
 .itemImage {
