--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,52 @@
 body {
-  background-color: azure;
+    background-color: #444444;
+}
+
+.main {
+    
+}
+
+textarea {
+    background-color: darkgrey;
+    border-radius: 5px;
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    font-size: 15px;
+    color: aliceblue;
+}
+
+button {
+    width: 75px;
+    height: 20px;
+    background-color: dimgray;
+    color: aliceblue;
+    border-radius: 5px;
+    border: none;
 }
 
 .App-wrapper {
-  width: 1440px;
-  margin: 0 auto;
-  display: grid;
+    margin: 0 auto;
+    width: 1366px;
+    height: 768px;
+    background-color: #444444;
+    background-image: url("./../src/assets/images/50-Beautiful-and-Minimalist-Presentation-Backgrounds-01.jpg");
+  background-repeat: no-repeat;
+    box-shadow: 0px 1px 5px 5px #000;
+}
 
-  grid-template-areas:"h h"
-                      "n c";
+.App_friends-main {
+    width: 200px;
+    height: 100%;
+}
 
-  grid-template-rows: 100px 1fr;
-  grid-template-columns: 3fr 9fr;
-  grid-gap: 10px;
+.main {
+    display: flex;
 }
 
 .App-wrapper-content {
-  grid-area: c;
-  background-color: coral;
-  color: antiquewhite;
-  padding: 10px;
+    width: 1166px;
 }
-
 
 
 
