--- a/src/Components/Common/Preloader.module.css
+++ b/src/Components/Common/Preloader.module.css
@@ -1,4 +1,7 @@
 .preloader {
-    width: 250px;
-    height: 250px;
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    margin-left: 300px;
+    margin-top: 200px;
 }
