--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,10 +1,15 @@
 .header {
-  grid-area: h;
-  background-color: blue;
+ width: 300px;
   height: 100px;
+  color: aliceblue;
+  font-size: 35px;
+  margin: 0 auto;
+  font-family:  Monotype Corsiva;
+  text-align: center;
+  padding-top: 30px;
 }
 
-.header img {
-  width: 100px;
-  height: 100px;
+.login {
+  color: cornsilk;
+  margin: 0 auto;
 }
