--- a/src/Components/Profile/MyPosts/Post/Post.module.css
+++ b/src/Components/Profile/MyPosts/Post/Post.module.css
@@ -1,4 +1,14 @@
 .posts_item img {
+    margin-top: 30px;
     width: 50px;
 border-radius: 50%;
+}
+
+.post_like {
+    color: aliceblue;
+}
+
+.posts_message {
+    color: aliceblue;
+    padding: 10px;
 }
