--- a/src/Components/Users/Users.module.css
+++ b/src/Components/Users/Users.module.css
@@ -1,3 +1,7 @@
+.pageIndication_wrap {
+    display: flex;
+}
+
 .item_image {
     width: 50px;
     height: 50px;
@@ -10,31 +14,71 @@
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    border: 1px solid cornsilk;
-    border-radius: 7px;
+    border-bottom: 1px solid cornsilk;
+    padding-bottom: 7px;
+}
+
+.dataItemNameStat_wrep {
+
+}
+
+.dataItemCityCountry_wrep {
+
 }
 
 .main_wrap {
+    width: 650px;
     display: flex;
     margin-bottom: 20px;
 }
 
 .dataItem {
-    width: 40%;
+    width: 150px;
+    color: darkgray;
     font-size: 17px;
+    cursor: pointer;
 }
 
 .dataItem_name {
+    width: 100%;
     font-weight: bold;
     font-size: 20px;
-    color: darkorchid;
+    text-decoration: none;
+    color: aliceblue;
 }
 
-.pageIndication {
-    font-weight: bold;
+.dataItem_status {
+    color: aliceblue;
+}
+
+.dataItem_correctionText {
+    text-align: center;
 }
 
 .itemStyle {
-    color: #000;
-    padding: 3px;
+    color: aliceblue;
+    padding: 5px;
 }
+
+.pageIndication {
+    color: crimson;
+    font-weight: bold;
+}
+
+.itemStyle:hover {
+    color: crimson;
+}
+
+.users_wrap {
+    width: 1166px;
+    padding: 53px;
+}
+
+.itemsList_wrap {
+    margin-top: 50px;
+}
+
+.sharePages {
+    color:  #ffffff;
+}
+
