Follow unfollow are done

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -13,3 +13,15 @@
   color: cornsilk;
   margin: 0 auto;
 }
+
+.login:hover {
+    color: crimson;
+}
+
+.login:active {
+    color: crimson;
+}
+
+.myLogin {
+    color: white;
+}
