--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@ button {
     border: none;
 }
 
+button:disabled {
+    opacity: 0.3;
+}
+
 .App-wrapper {
     margin: 0 auto;
     width: 1366px;
